backend/pipeline/pipeline-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: fastmdm
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastmdm
      component: backend
  template:
    metadata:
      labels:
        app: fastmdm
        component: backend
    spec:
      volumes:
        - name: public-volume
          persistentVolumeClaim:
            claimName: backend
      containers:
      - name: backend
        image: #{docker-server}#/fastmdm/#{Build.SourceBranchName}#/backend:#{Build.BuildId}#
        imagePullPolicy: Always
        ports:
          - containerPort: 1337
        resources:
          limits:
            cpu: 1500m
            memory: 1512Mi
          requests:
            cpu: 64m
            memory: 64Mi			  
        volumeMounts:
          - name: public-volume
            mountPath: /srv/app/public
      imagePullSecrets:
        - name: docker-registry-key
