backend/pipeline/pipeline-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "700"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "700"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "700"
spec:
  tls:
    - hosts:
        - "#{frontend-url}#"
      secretName: fastmdm-com-prod-tls
  rules:
  - host: "#{frontend-url}#"
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
